# ArtGallerySegmentation

./: CMakeLists.txt  README.md  Read_poly_files.cpp
include/: poly2contour.cpp  poly2contour.hpp  visibility_graph.cpp  visibility_graph.hpp
polydata/: GiangHo.poly  Halloween.poly  Leafy-tree.poly  Misk-10.gif.poly  Pine-tree.poly  Silhouette_hand.norm.poly  apple-10.gif.poly  band.poly  beetle-10.gif.poly  beetle.poly  belly.poly  bike2.poly  butterfly-10.gif.poly  camel-10.gif.poly  children-10.gif.poly  crowd.poly  cup-10.gif.poly  dancing1.norm.poly  dancing2.norm.poly  dancing5.norm.poly  dancing6.norm.poly  device0-10.gif.poly  device2-10.gif.poly  device5-10.gif.poly  dog.poly_0001.ps  finch.poly  flamingo.poly  flatfish-10.gif.poly  flower.poly  fly-4.gif.poly  fly-6.gif.poly  fly-8.gif.poly  fork-10.gif.poly  girl.poly  girl2.poly  guitar-10.gif.poly  hand.poly  hand1.poly  hand_drawn_silhouette_by_mr_brass_man-d4ukt1f.norm.poly  hole-airplant-1.poly  (+29 more)
src/: Read_poly_files.cpp
